syntax = "proto3";

option csharp_namespace = "Server";

import "google/protobuf/timestamp.proto";

package Validate;

service Validate {
  rpc Validate (DataRequest) returns (DataReply);
}

service ValidateFullname {
  rpc ValidateFullname (FullnameRequest) returns (FullnameReply);
}

service ValidatePhoneNumbers {
  rpc ValidatePhoneNumbers (PhoneNumbersRequest) returns (PhoneNumbersReply);
}

service ValidateEmails {
  rpc ValidateEmails (EmailsRequest) returns (EmailsReply);
}

service ValidateAddresses {
  rpc ValidateAddresses (AddressesRequest) returns (AddressesReply);
}

service ValidatePassport {
  rpc ValidatePassport (PassportRequest) returns (PassportReply);
}

service ValidateBirthDate {
  rpc ValidateBirthDate (BirthDateRequest) returns (BirthDateReply);
}

message Fullname {
  string name = 1;
  string surname = 2;
  string patronymic = 3;
}

message DataRequest {
  Fullname fullname = 1;
  repeated string phoneNumbers = 2;
  repeated string emails = 3;
  repeated string addresses = 4;
  string passport = 5;
  google.protobuf.Timestamp birthDate = 6;
}

message DataReply {
  FullnameReply fullname = 1;
  repeated ValidateString phoneNumbers = 2;
  repeated ValidateString emails = 3;
  repeated ValidateString addresses = 4;
  ValidateString passport = 5;
  ValidateTimestamp birthDate = 6;
}

message ValidateString{
  string Value = 1;
  bool IsValid = 2;
  optional string comment = 3;
}

message ValidateTimestamp{
  google.protobuf.Timestamp Value = 1;
  bool IsValid = 2;
  optional string comment = 3;
}

message FullnameRequest {
  string name = 1;
  string surname = 2;
  string patronymic = 3;
}

message FullnameReply {
  ValidateString name = 1;
  ValidateString surname = 2;
  ValidateString patronymic = 3;
}

message PhoneNumbersRequest {
  repeated string phoneNumbers = 1;
}

message PhoneNumbersReply {
  repeated ValidateString phoneNumbers = 1;
}

message EmailsRequest {
  repeated string emails = 1;
}

message EmailsReply {
  repeated ValidateString emails = 1;
}

message AddressesRequest {
  repeated string addresses = 1;
}

message AddressesReply {
  repeated ValidateString addresses = 1;
}

message PassportRequest {
  string passport = 1;
}

message PassportReply {
  ValidateString passport = 1;
}

message BirthDateRequest {
  google.protobuf.Timestamp birthDate = 1;
}

message BirthDateReply {
  ValidateTimestamp birthDate = 1;
}